# hub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  db.py  logging_config.py  main.py  pivot-plan.md  pyproject.toml
.alembic/: env.py
.alembic/versions/: 15c85a88b1c2_add_goal_history_tracking.py  414aabd576eb_add_item_base_model_and_consumable_.py  77ce233f1fe9_add_category_to_ingredients.py  89a0fa279701_drop_scratchpad_note_table.py  93db1ccafdf0_add_needed_column_to_ingredients.py  b6bb6e680abe_add_reflect_models_for_goal_tracking.py  d4b1a2c3e5f7_merge_heads.py  e8a1b2c3d4f5_pantry_uuid_primary_keys.py  fca8a2cd3e28_add_sources_field_to_recipe.py  fe79425efa9a_default_ingredients_needed_to_false.py
.docs/: pantry-mdorm-migration-research.md
alembic/: env.py
alembic/versions/: 8ed89148b566_lowercase_ingredient_categories.py  a6df9286ae8b_add_tags_field_to_recipe.py  f7e958f1480c_initial_migration.py
db/: __init__.py
db/mixins/: versioned_mixin.py
db/pantry/: consumable.py  ingredient.py  item.py  recipe.py  recipe_ingredient_assoc.py
db/reflect/: __init__.py  goal.py  goal_month_outcome.py  monthly_review.py  scratchpad_note.py  weekly_check_in.py
db/second_thought/: __init__.py  justification.py
docs/: pantry-uuid-migration-plan.md
enums/: __init__.py  consumable_category.py  ingredient_category.py  reflect.py
models/pantry/: __init__.py  consumable.py  ingredient.py  item.py  recipe.py  recipe_ingredient_assoc.py
routes/: __init__.py  pantry.py  second_thought.py
scripts/: migrate_pantry_v1_to_v2.py
src/hub/: main.py  (+1 more)
(+111 files in other folders)
