[project]
name = "hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.7",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-history>=2.1.4",
    "uvicorn>=0.40.0",
]
