[project]
name = "hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.7",
    "loguru>=0.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-history>=2.1.4",
    "uvicorn>=0.40.0",
]
