[project]
name = "hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "dropbox>=12.0.2",
    "fastapi>=0.128.7",
    "fastmcp>=3.2.0",
    "loguru>=0.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-history>=2.1.4",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
